(chores): fix security vulnerabilities
Signed-off-by: Abdul Kapti <abdul.kapti@siemens-healthineers.com>